fix: collapse componente reutilizable

--- a/src/scss/components/_cards.scss
+++ b/src/scss/components/_cards.scss
@@ -968,6 +968,7 @@ button.card {
         }
 
         .form-radio {
+          cursor: pointer;
           margin-left: auto;
           width: 1.25rem;
           height: 1.25rem;
